--- a/TemasClaseAndroid/Tema7/EjemploContentProvider/app/src/main/res/values/strings.xml
+++ b/TemasClaseAndroid/Tema7/EjemploContentProvider/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EjemploContentProvider</string>
+    <string name="cons">Cons</string>
+    <string name="insertar">insertar</string>
+    <string name="eliminar">Eliminar</string>
 </resources>
